# PineIDE

./: .gitignore  README.md  pyproject.toml  setup.py
pineide/: __init__.py  cli.py  custom_widgets.py  editor.py  header.py  homescreen.py  ide.py  pine.css  pine.py  sidebar.py
pineide/panels/: __init__.py  files.py  version_control.py
